--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section>
             <h2>About</h2>
             <p>Welcome to my personal website! Here you can find more about my work and design projects.</p>
-            <img src="homepage-image.jpg" alt="Kurt Stephens' Design Work" />
+            <img src="homepage-image.jpg" alt="Kurt Stephens' Design Work" class="homepage-image" />
         </section>
 
         <section>
