--- a/index.html
+++ b/index.html
@@ -4,35 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kurt Stephens</title>
-    <!-- Link to the CSS file, make sure the path is correct -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Kurt Stephens</h1>
-            <p>Your source for creative inspiration and design.</p>
+    <!-- Fullscreen background container -->
+    <div class="fullscreen-background">
+        <!-- Upper-left text -->
+        <div class="branding">
+            Kurt Stephens
         </div>
-    </header>
-
-    <main>
-        <section>
-            <h2>About</h2>
-            <p>Welcome to my personal website! Here you can find more about my work and design projects.</p>
-            <img src="homepage-image.jpg" alt="Kurt Stephens' Design Work" class="homepage-image" />
-        </section>
-
-        <section>
-            <h2>Contact</h2>
-            <p>Feel free to reach out for collaboration or inquiries.</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Kurt Stephens. All rights reserved.</p>
-    </footer>
-
-    <!-- Link to the JavaScript file, make sure the path is correct -->
-    <script src="script.js"></script>
+        <!-- Upper-right text -->
+        <div class="menu">
+            About
+        </div>
+    </div>
 </body>
 </html>
