--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
             gap: 20px;
         }
 
-        .nav a {
+        .nav a, .caption {
             text-decoration: none;
             color: black;
             font-weight: bold;
+            font-size: 14px;
         }
 
         /* Centered Content */
         .content {
-            max-width: 800px;
-            margin: 100px 0 0 50px; /* Aligns image to the left */
+            max-width: calc(100vw - 80px);
+            margin: 100px auto 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .image-container {
-            width: 100%;
+            width: calc(100% - 100px);
             height: auto;
-        }
-
-        .caption {
-            margin-top: 10px;
-            font-size: 14px;
+            object-fit: cover;
         }
     </style>
 </head>
@@ -74,3 +74,4 @@
 
 </body>
 </html>
+
