--- a/index.html
+++ b/index.html
@@ -39,17 +39,23 @@
 
         /* Centered Content */
         .content {
-            max-width: calc(100vw - 80px);
+            width: 100%;
+            max-width: 1200px;
             margin: 100px auto 0;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: flex-start;
         }
 
         .image-container {
-            width: calc(100% - 100px);
-            height: auto;
+            width: 100%;
+            height: 500px; /* Adjusted height to avoid scrolling */
             object-fit: cover;
+        }
+
+        .caption {
+            margin-top: 5px;
+            align-self: flex-end;
         }
     </style>
 </head>
@@ -74,4 +80,3 @@
 
 </body>
 </html>
-
