--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="header">
         <div class="logo">KURT STEPHENS</div>
         <div class="nav">
-            <a href="#">blog</a>
+            <a href="blog.html">blog</a>
             <a href="#">videography</a>
             <a href="#">photography</a>
             <a href="#">contact</a>
