--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <div class="logo">KURT STEPHENS</div>
         <div class="nav">
             <a href="blog.html">blog</a>
-            <a href="#">videography</a>
-            <a href="#">photography</a>
+            <a href="videography.html">videography</a>
+            <a href="photography.html">photography</a>
             <a href="#">contact</a>
         </div>
     </div>
